...
  return (
    <Stack screenOptions={{ headerShown: false, headerTintColor: colors.text }}>
      <Stack.Screen
        name="index"
        options={{
          headerShown: true,
          headerTitle: "Profile",
          headerTransparent: true,
          headerLeft: () => (
            <View style={{ flexDirection: "row", alignItems: "center" }}>
              <NotificationBell />
            </View>
          ),
...
        }}
      />
      <Stack.Screen
        name="edit-profile"
        options={{
          headerShown: true,
          headerTitle: "Edit Profile",
          headerBackTitle: "Profile",
          headerTransparent: true,
        }}
      />
      <Stack.Screen
        name="achievements"
...
