...

    if (allPlaceResults.length > 0 || googleLoading)
      sections.push({ title: "Places", data: allPlaceResults });
    if (userResults.length > 0)
      sections.push({ title: "People", data: userResults });
    if (postResults.length > 0)
      sections.push({ title: "Posts", data: postResults.slice(0, 5) });
    if (eventResults.length > 0)
      sections.push({ title: "Events", data: eventResults });
    if (guideResults.length > 0)
      sections.push({ title: "Guides", data: guideResults });

    return sections;
...
